# nomad-chemical-energy

./: README.md  Untitled.ipynb  nomad.yaml  pyproject.toml
.github/workflows/: python-test.yml
.virtual_documents/: Untitled.ipynb
ce_necc/: nomad_plugin.yaml  parser.py  schema.py
ce_nome_s/: __init__.py  nomad_plugin.yaml  parser.py  schema.py
ce_nsli_s/: __init__.py  ce_nsli_id.py  nomad_plugin.yaml
ce_wannsee_s/: __init__.py  nomad_plugin.yaml
hzb_characterizations/: __init__.py  nomad_plugin.yaml
src/nomad_chemical_energy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nomad_chemical_energy/apps/: __init__.py  amcc_reproducibility_app.py  catlab_combinatorial_app.py  catlab_pixel_app.py  necc_compare_app.py  necc_find_app.py  nesd_oer_app.py  nome_oer_cp_app.py  nome_sample_app.py  voila_finder_app.py
src/nomad_chemical_energy/parsers/: __init__.py  ce_amcc_parser.py  ce_necc_parser.py  ce_nesd_parser.py  ce_nome_parser.py  ce_wannsee_parser.py  dlr_electro_chemistry_parser.py  hzb_catlab_parser.py  hzb_general_parser.py  tfc_parser.py
src/nomad_chemical_energy/schema_packages/: __init__.py  ce_amcc_package.py  ce_necc_package.py  ce_nesd_package.py  ce_nome_package.py  ce_nsli_package.py  ce_wannsee_package.py  dlr_electro_chemistry_package.py  hzb_catlab_package.py  hzb_characterization_package.py  hzb_general_measurement_package.py  hzb_general_process_package.py  tfc_package.py
src/nomad_chemical_energy/schema_packages/file_parser/: biologic_parser.py  ch_instruments_txt_parser.py  corr_ware_parser.py  electrolyser_tdms_parser.py  gamry_parser.py  mps_file_parser.py  necc_excel_parser.py  nesd_metadata_excel_parser.py  palmsense_parser.py  pfo_parser.py  pumprate_parser.py  spectra_international_parser.py  xas_parser.py  xrf_spx_parser.py  zahner_parser.py
src/nomad_chemical_energy/schema_packages/utilities/: ce_nesd_oer_analysis.py  ce_nsli_id.py  potentiostat_plots.py
tests/: conftest.py  test_necc.py  test_parser.py
tests/data/: 01_N2_OCP.pssession  02_peis_ocv.ism  04_N2_CV_50mV.pssession  05_N2_CP_10mAcm2_24h.pssession  05_N2_LSV_10mV_1600rpm.pssession  11_PEIS_700mV.pssession  20260122_necc_ec_gc_template.xlsx  20260206_necc_ec_gc_template.xlsx  21-cp-625ma-5min.isw  21-cp-625ma-5min_c.txt  22-cp-1700mv-10min.isw  22-cp-1700mv-10min_c.txt  230531-CA-test2.DTA  25-currentscan3.isw  25-currentscan3_c.txt  3stepCACA.DTA  CE-NOME_FrJo_240815_0001.0 H2O Au000001.txt  CE-NOME_MiGo_240429_0001.SA_5_MM.csv  CHRONOA.DTA  CHRONOP.DTA  CV-1T.txt  CV.DTA  CVCA.DTA  CVCAHintereinander_Pos1.DTA  CVCP.DTA  CVCPHintereinander_pos2.DTA  CV__#3.DTA  CstC_nesd.mpr  CstV_nesd.mpr  EIS -0,48 V.txt  EISPOT.DTA  GEIS_nesd.mpr  LSG.DTA  LSV.DTA  LSV.txt  LSVCA.DTA  OCP.DTA  PEIS_nesd.mpr  calib_30min_0.1ppm.ABS  geis-100ma.ism  (+14 more)
tests/data/archives/: necc_test_recipe.archive.json
